[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rumdl-pre-commit"
version = "0.1.58"
description = "Pre-commit hook for rumdl, a rust-based Markdown linter."
authors = [
    { name = "Ruben J. Jongejan", email = "ruben.jongejan@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "rumdl==0.1.58"
]

[project.urls]
Homepage = "https://github.com/rvben/rumdl"
Repository = "https://github.com/rvben/rumdl-pre-commit"

[tool.setuptools]
py-modules = []
